# DAGK_BanVeMayBay/api/controllers/flights.js
@@ -13,6 +13,7 @@ module.exports = {
 	getFlight,
 	bookTicket,
 	getFlightInfo,
+	updateInfoTicket,
 };
 
 var connection = mysql.createConnection({
@@ -189,59 +190,68 @@ function bookTicket(res,req,next) {
 	var queryGiaVe = util.format("select giaban from chuyenbay where machuyenbay = \'%s\' and ngaydi = \'%s\' and hang = \'%s\' and muc = \'%s\'", "CF108","2016/10/20","C","F");
 
 	connection.query(queryGiaVe, function(err, results) {
-		if (!err) {
-			if (results != undefined ) { 
-				if (results.length == 0) {
-					res.sendStatus(404);
-				} else {
-					console.log(results);
-					var madatcho = generateUUID.generate(6);
-					var thoigiancapphat = dateformat(new Date(), "yyyy-mm-dd");
-					var queryDatCho = util.format("INSERT INTO DATCHO(madatcho, thoigiandatcho, tongtien, trangthai) values(\'%s\',\'%s\',%d,%d)", madatcho, thoigiancapphat , results[0].giaban * soghe, 0);
-					
-					var queryChiTietChuyenBay = util.format("INSERT INTO chitietchuyenbay(madatcho, machuyenbay, ngay, hang, mucgia) values(\'%s\',\'%s\',\'%s\',\'%s\',\'%s\')",madatcho,flightID,fromDate,hang,mucgia);
+		try {
+			if (!err) {
+				if (results != undefined ) { 
+					if (results.length == 0) {
+						res.sendStatus(404);
+					} else {
+						console.log(results);
+						var madatcho = generateUUID.generate(6);
+						var thoigiancapphat = dateformat(new Date(), "yyyy-mm-dd");
+						var queryDatCho = util.format("INSERT INTO DATCHO(madatcho, thoigiandatcho, tongtien, trangthai) values(\'%s\',\'%s\',%d,%d)", madatcho, thoigiancapphat , results[0].giaban * soghe, 0);
+						
+						var queryChiTietChuyenBay = util.format("INSERT INTO chitietchuyenbay(madatcho, machuyenbay, ngay, hang, mucgia) values(\'%s\',\'%s\',\'%s\',\'%s\',\'%s\')",madatcho,flightID,fromDate,hang,mucgia);
 
-					console.log(queryDatCho);
-					console.log(queryChiTietChuyenBay);
+						console.log(queryDatCho);
+						console.log(queryChiTietChuyenBay);
 
-					connection.query(queryDatCho, function(err,results) {
+						connection.query(queryDatCho, function(err,results) {
 
-						if(!err) {
-							con
-							connection.query(queryChiTietChuyenBay, function(err,results) {
-								if(!err) {
-									res.send({
-										"datcho" : {
-											"madatcho": madatcho,
-											"machuyenbay": machuyenbay,
-											"ngaydi": fromDate,
-											"thoigiancapphat": thoigiancapphat,
-											"thoihansudung": 5*60*1000
-										}
-									});
-								} else {
-									res.sendStatus(404);
-									var queryDeleteDatCho = util.format("DELETE FROM datcho where madatcho = \'%s\'",madatcho);
-									console.log(queryDeleteDatCho); 
+							if(!err) {
+								con
+								connection.query(queryChiTietChuyenBay, function(err,results) {
+									if(!err) {
+										res.send({
+											"datcho" : {
+												"madatcho": madatcho,
+												"machuyenbay": machuyenbay,
+												"ngaydi": fromDate,
+												"thoigiancapphat": thoigiancapphat,
+												"thoihansudung": 5*60*1000
+											}
+										});
+									} else {
+										res.sendStatus(404);
+										var queryDeleteDatCho = util.format("DELETE FROM datcho where madatcho = \'%s\'",madatcho);
+										console.log(queryDeleteDatCho); 
 
-									connection.query(queryDeleteDatCho, function(err,results) {
-										if (!err) {
-											console.log(err);
-										}
-									});
-								}
-							});
-						} else {
-							res.sendStatus(404);
-						}
-					});
-				}
+										connection.query(queryDeleteDatCho, function(err,results) {
+											if (!err) {
+												console.log(err);
+											}
+										});
+									}
+								});
+							} else {
+								res.sendStatus(404);
+							}
+						});
+					} }
+			} else {
+				res.sendStatus(404);
+				console.log(err);
 			}
-		} else {
+		} catch (e) {
 			res.sendStatus(404);
-			console.log(err);
 		}
 	});
+}
+
+function updateInfoTicket(res,req,nxet) {
+
+	var madatcho = req.swagger.params.madatcho.value;
+
 }
 
 
